FIX: Updates for more user pages on mobile (#43)

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -11,7 +11,7 @@
 }
 
 html
-  body:not(.static-tos):not(.static-faq):not(.static-privacy):not(.about-page):not(.static-faq):not(.badges-page):not(.tags-page):not(.archetype-banner):not(.archetype-regular):not(.archetype-private_message):not(.admin-interface):not(.edit-category):not(.user-summary-page):not(.user-activity-page):not(.user-invites-page):not(.user-preferences-page)
+  body:not(.static-tos):not(.static-faq):not(.static-privacy):not(.about-page):not(.static-faq):not(.badges-page):not(.tags-page):not(.archetype-banner):not(.archetype-regular):not(.archetype-private_message):not(.admin-interface):not(.edit-category):not(.user-summary-page):not(.user-activity-page):not(.user-invites-page):not(.user-preferences-page):not(.user-messages-page):not(.user-notifications-page):not(.user-badges-page)
   #main-outlet {
   width: calc(100% - 1em);
   padding: 0em 0.5em 1em 0.5em;
@@ -33,6 +33,9 @@ html body.user-summary-page #main-outlet,
 html body.user-activity-page #main-outlet,
 html body.user-invites-page #main-outlet,
 html body.user-preferences-page #main-outlet,
+html body.user-messages-page #main-outlet,
+html body.user-notifications-page #main-outlet,
+html body.user-badges-page #main-outlet,
 html body.staff:not(.navigation-topics) #main-outlet {
   border-radius: 0px;
   width: calc(100% - 3em);
